<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2017 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~    https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->
<layout>

    <data>

        <variable
            name="currentItem"
            type="com.android.example.spline.model.Layer"/>
    </data>

    <merge xmlns:android="http://schemas.android.com/apk/res/android"
           xmlns:app="http://schemas.android.com/apk/res-auto">

        <TextView
            style="@style/Base.TextAppearance.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="@dimen/medium_padding"
            android:text="@string/position_title"/>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/large_padding"
            android:paddingLeft="@dimen/small_padding"
            android:paddingRight="@dimen/small_padding"
            android:paddingTop="0dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/x_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_padding"
                app:hintAnimationEnabled="false"
                app:layout_constraintEnd_toStartOf="@+id/y_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/x_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/x_hint"
                    android:inputType="textNoSuggestions"
                    android:text="@={currentItem.x}"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/y_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_padding"
                app:hintAnimationEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/x_layout"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/y_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/y_hint"
                    android:inputType="textNoSuggestions"
                    android:text="@={currentItem.y}"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/width_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_padding"
                app:hintAnimationEnabled="false"
                app:layout_constraintEnd_toStartOf="@+id/height_layout"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/x_layout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/width_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/width_hint"
                    android:inputType="textNoSuggestions"
                    android:text="@={currentItem.width}"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/height_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/small_padding"
                app:hintAnimationEnabled="false"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/width_layout"
                app:layout_constraintTop_toBottomOf="@+id/y_layout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/height_value"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/height_hint"
                    android:inputType="textNoSuggestions"
                    android:text="@={currentItem.height}"/>

            </android.support.design.widget.TextInputLayout>

        </android.support.constraint.ConstraintLayout>

    </merge>
</layout>